welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: unclosed character literal
	{return 'true'}
                     ^parotTrouble:5: error: unclosed character literal
	else{return 'false'}
                          ^parotTrouble:1: error: Missing closing brace `}' assumed here
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^parotTrouble:6: error: Missing closing brace `}' assumed here
}
^